Nope. Don't use trailing slash. Now using Goji framework for routing.

--- a/theme_admin/src/templates/login.html
+++ b/theme_admin/src/templates/login.html
@@ -10,7 +10,7 @@
     <div class="page-header">
       <h1>Login</h1>
     </div>
-    <form action="/login/" method="post">
+    <form action="/login" method="post">
       <div class="form-group">
         <label for="inputEmail">E-mail</label>
         <input name="email" type="email" class="form-control" id="inputEmail" placeholder="E-mail">
