--- a/theme_admin/src/templates/index.html
+++ b/theme_admin/src/templates/index.html
@@ -17,7 +17,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/admin/">Admin</a>
+          <a class="navbar-brand" href="/admin">Admin</a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
@@ -25,7 +25,7 @@
             <li><a href="/admin/settings">Settings</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/logout/">Logout</a></li>
+            <li><a href="/logout">Logout</a></li>
           </ul>
         </div>
       </div>
