--- a/theme_admin/src/templates/index.html
+++ b/theme_admin/src/templates/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Admin</title>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <base href="/admin/">
     <script type="text/javascript" src="/admin/assets/js/main.js"></script>
     <link rel="stylesheet" href="/admin/assets/css/style.css">
